--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -63,7 +63,8 @@
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetEntityDataPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\EntityEventPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.cpp" />
-    <ClCompile Include="..\..\..\..\source\network\packets\AnimatePacket.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\AnimatePacket.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\RespawnPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -95,7 +96,8 @@
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetEntityDataPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\EntityEventPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.hpp" />
-    <ClInclude Include="..\..\..\..\source\network\packets\AnimatePacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\AnimatePacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\RespawnPacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
