--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -180,6 +180,7 @@ add_library(reminecraftpe-core STATIC
     network/packets/EntityEventPacket.cpp
     network/packets/MessagePacket.cpp
     network/packets/AnimatePacket.cpp
+    network/packets/RespawnPacket.cpp
     network/RakIO.cpp
     network/RakNetInstance.cpp
     network/MinecraftPackets.cpp
