--- a/platforms/windows/projects/Network/Network.vcxproj
+++ b/platforms/windows/projects/Network/Network.vcxproj
@@ -65,6 +65,7 @@
     <ClCompile Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\AnimatePacket.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\network\packets\RespawnPacket.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\network\packets\InteractPacket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\network\MinecraftPackets.hpp" />
@@ -98,6 +99,7 @@
     <ClInclude Include="$(MC_ROOT)\source\network\packets\SetHealthPacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\AnimatePacket.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\network\packets\RespawnPacket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\network\packets\InteractPacket.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
