--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -161,6 +161,7 @@ add_library(reminecraftpe-core STATIC
     network/packets/RequestChunkPacket.cpp
     network/packets/PlayerEquipmentPacket.cpp
     network/packets/InteractPacket.cpp
+	network/packets/UseItemPacket.cpp
     network/packets/SetEntityDataPacket.cpp
     network/packets/SetHealthPacket.cpp
     network/packets/ChunkDataPacket.cpp
