--- a/platforms/windows/projects/Network/Network.vcxproj.filters
+++ b/platforms/windows/projects/Network/Network.vcxproj.filters
@@ -123,7 +123,7 @@
       <Filter>Header Files\Packets</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\network\packets\TakeItemEntityPacket.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Packets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -227,7 +227,7 @@
       <Filter>Source Files\Packets</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\network\packets\TakeItemEntityPacket.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Packets</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
