--- a/platforms/windows/projects/Renderer/Renderer.vcxproj.filters
+++ b/platforms/windows/projects/Renderer/Renderer.vcxproj.filters
@@ -131,9 +131,6 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\BlendTarget.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\BlendTarget_JsonParser.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\BufferType.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
@@ -141,9 +138,6 @@
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ComparisonFunc.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ComparisonFunc_JsonParser.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\CullMode.hpp">
@@ -155,22 +149,13 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\PrimitiveMode.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\PrimitiveMode_JsonParser.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\RenderState.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\RenderState_JsonParser.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderPrimitiveTypes.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderStagesBits.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderStagesBits_JsonParser.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderType.hpp">
@@ -182,22 +167,13 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\StencilOp.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\StencilOp_JsonParser.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\TextureFiltering.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\TextureFiltering_JsonParser.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\TextureFormat.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\VertexField.hpp">
-      <Filter>Header Files\HAL\Enums</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\VertexField_JsonParser.hpp">
       <Filter>Header Files\HAL\Enums</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\VertexFieldType.hpp">
@@ -415,45 +391,6 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\renderer\WorldConstants.hpp">
       <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\BlendStateNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\BufferNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ConstantBufferContainerNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\DepthStencilStateNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ImmediateBufferNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RasterizerStateNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RenderContextNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RenderDeviceNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantWithDataNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderProgramNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\TextureNull.hpp">
-      <Filter>Header Files\HAL\Null</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -718,44 +655,32 @@
     <ClCompile Include="$(MC_ROOT)\source\renderer\WorldConstants.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\BlendStateNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\BlendTarget_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\BufferNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\RenderState_JsonParser.hpp">
+      <Filter>Header Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ConstantBufferContainerNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\ComparisonFunc_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\DepthStencilStateNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\PrimitiveMode_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ImmediateBufferNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\RenderState_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RasterizerStateNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderStagesBits_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RenderContextNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\StencilOp_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RenderDeviceNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\TextureFiltering_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantWithDataNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderProgramNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\TextureNull.cpp">
-      <Filter>Source Files\HAL\Null</Filter>
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\VertexField_JsonParser.cpp">
+      <Filter>Source Files\HAL\Enums</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
