--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -204,6 +204,9 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\texture\ColorSpace.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\texture\ImageData.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\texture\TextureData.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\GuiElement.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\IntRectangle.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\ScreenRenderer.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -337,6 +340,8 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\renderer\RenderMaterialGroup.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\texture\ImageData.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\texture\TextureData.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiElement.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\ScreenRenderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
